--- a/source/Habanero.Testability.Helpers/Habanero.Testability.Helpers.csproj
+++ b/source/Habanero.Testability.Helpers/Habanero.Testability.Helpers.csproj
@@ -70,11 +70,15 @@
     </Compile>
     <Compile Include="DataAccessorInMemoryWithMocks.cs" />
     <Compile Include="DBNumberGeneratorStub.cs" />
+    <Compile Include="DummyPropertyInfo.cs" />
     <Compile Include="FakeBusinessObjectCollection.cs" />
+    <Compile Include="FakePropertyInfo.cs" />
     <Compile Include="GeneralTestingExtensions.cs" />
+    <Compile Include="Guard.cs" />
     <Compile Include="HabaneroLoggerFactoryStub.cs" />
     <Compile Include="PropDefFake.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReflectionHelper.cs" />
     <Compile Include="SingleRelDefFake.cs" />
     <Compile Include="TransactionalStub.cs" />
   </ItemGroup>
