--- a/source/Habanero.Testability.Helpers/Habanero.Testability.Helpers.csproj
+++ b/source/Habanero.Testability.Helpers/Habanero.Testability.Helpers.csproj
@@ -72,12 +72,13 @@
     <Compile Include="DBNumberGeneratorStub.cs" />
     <Compile Include="DummyPropertyInfo.cs" />
     <Compile Include="FakeBusinessObjectCollection.cs" />
+    <Compile Include="FakeMethodInfo.cs" />
     <Compile Include="FakePropertyInfo.cs" />
+    <Compile Include="FakeType.cs" />
     <Compile Include="GeneralTestingExtensions.cs" />
     <Compile Include="HabaneroLoggerFactoryStub.cs" />
     <Compile Include="PropDefFake.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReflectionHelper.cs" />
     <Compile Include="SingleRelDefFake.cs" />
     <Compile Include="TransactionalStub.cs" />
   </ItemGroup>
