Fixed #1505 (Testers: Add MultipleRelTesterForTesting DeleteParentAction)
git-svn-id: http://delicious:8080/svn/habanero/HabaneroCommunity/Habanero.Testability/Trunk@15284 6b8f5710-b20c-734b-ac0a-461ee9249d7d

--- a/source/Habanero.Testability.Testers.Tests/Habanero.Testability.Testers.Tests.csproj
+++ b/source/Habanero.Testability.Testers.Tests/Habanero.Testability.Testers.Tests.csproj
@@ -79,6 +79,7 @@
     </Compile>
     <Compile Include="TestBOTester.cs" />
     <Compile Include="TestBOTesterGeneric.cs" />
+    <Compile Include="TestMultipleRelDefTester.cs" />
     <Compile Include="TestPropDefTester.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestSingleRelDefTester.cs" />
