Fixed references in the Project Files as they were pointing to the wrong versions of Habanero i.e. 2.4.255
git-svn-id: http://delicious:8080/svn/habanero/HabaneroCommunity/Habanero.Testability/Trunk@15296 6b8f5710-b20c-734b-ac0a-461ee9249d7d

--- a/source/Habanero.Testability.Testers.Tests/Habanero.Testability.Testers.Tests.csproj
+++ b/source/Habanero.Testability.Testers.Tests/Habanero.Testability.Testers.Tests.csproj
@@ -36,15 +36,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Habanero.Base, Version=2.4.0.255, Culture=neutral, PublicKeyToken=1fb6a9c86f815c07, processorArchitecture=MSIL">
+    <Reference Include="Habanero.Base">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\Habanero.Base.dll</HintPath>
     </Reference>
-    <Reference Include="Habanero.BO, Version=2.4.0.255, Culture=neutral, PublicKeyToken=b7599514c88df7f1, processorArchitecture=MSIL">
+    <Reference Include="Habanero.BO">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\Habanero.BO.dll</HintPath>
     </Reference>
-    <Reference Include="Habanero.Smooth, Version=1.1.0.255, Culture=neutral, PublicKeyToken=c8a289c9d9f7993b, processorArchitecture=MSIL">
+    <Reference Include="Habanero.Smooth">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\Habanero.Smooth.dll</HintPath>
     </Reference>
