Move Habanero Console Logger out of HabaneroLoggerFactoryStub.
git-svn-id: http://delicious:8080/svn/habanero/HabaneroCommunity/Habanero.Testability/trunk@15606 6b8f5710-b20c-734b-ac0a-461ee9249d7d

--- a/source/Habanero.Testability.Helpers/Habanero.Testability.Helpers.csproj
+++ b/source/Habanero.Testability.Helpers/Habanero.Testability.Helpers.csproj
@@ -76,6 +76,8 @@
     <Compile Include="FakePropertyInfo.cs" />
     <Compile Include="FakeType.cs" />
     <Compile Include="GeneralTestingExtensions.cs" />
+    <Compile Include="HabaneroConsoleLogger.cs" />
+    <Compile Include="HabaneroConsoleLoggerFactory.cs" />
     <Compile Include="HabaneroLoggerFactoryStub.cs" />
     <Compile Include="PropDefFake.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
