Added NonValidatingTransactionCommitter to Helpers
git-svn-id: http://delicious:8080/svn/habanero/HabaneroCommunity/Habanero.Testability/trunk@16397 6b8f5710-b20c-734b-ac0a-461ee9249d7d

--- a/source/Habanero.Testability.Helpers/Habanero.Testability.Helpers.csproj
+++ b/source/Habanero.Testability.Helpers/Habanero.Testability.Helpers.csproj
@@ -79,6 +79,7 @@
     <Compile Include="HabaneroConsoleLogger.cs" />
     <Compile Include="HabaneroConsoleLoggerFactory.cs" />
     <Compile Include="HabaneroLoggerFactoryStub.cs" />
+    <Compile Include="NonValidatingTransactionCommitter.cs" />
     <Compile Include="PropDefFake.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SingleRelDefFake.cs" />
