started working on a test session
git-svn-id: http://delicious:8080/svn/habanero/HabaneroCommunity/Habanero.Testability/trunk@17435 6b8f5710-b20c-734b-ac0a-461ee9249d7d

--- a/source/Habanero.Testability.Tests/Habanero.Testability.Tests.csproj
+++ b/source/Habanero.Testability.Tests/Habanero.Testability.Tests.csproj
@@ -85,6 +85,7 @@
     <Compile Include="TestBOTestFactory_NonGeneric.cs" />
     <Compile Include="TestBOPropValueGeneratorRegistry.cs" />
     <Compile Include="TestTestFixture.cs" />
+    <Compile Include="TestTestSession.cs" />
     <Compile Include="TestValidValueGeneratorFromList.cs" />
     <Compile Include="TestValidValueGeneratorIncrementalInt.cs" />
     <Compile Include="TestValidValueGeneratorLong.cs" />
