Completed #1716 (Support for generating Image property values)
git-svn-id: http://delicious:8080/svn/habanero/HabaneroCommunity/Habanero.Testability/trunk@18206 6b8f5710-b20c-734b-ac0a-461ee9249d7d

--- a/source/Habanero.Testability/Habanero.Testability.csproj
+++ b/source/Habanero.Testability/Habanero.Testability.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -81,6 +82,7 @@
       <DependentUpon>Messages.resx</DependentUpon>
     </Compile>
     <Compile Include="TestSession.cs" />
+    <Compile Include="ValidValidGeneratorImage.cs" />
     <Compile Include="ValidValueGeneratorFromBOList.cs" />
     <Compile Include="ExtensionMethods\TestabilityExtensions.cs" />
     <Compile Include="TestFixture.cs" />
