Fixed up xml output directory
git-svn-id: http://delicious:8080/svn/habanero/HabaneroCommunity/Habanero.Testability/branches/v2.5-CF@18631 6b8f5710-b20c-734b-ac0a-461ee9249d7d

--- a/source/Habanero.Testability.CF/Habanero.Testability.CF.csproj
+++ b/source/Habanero.Testability.CF/Habanero.Testability.CF.csproj
@@ -32,7 +32,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <UseVSHostingProcess>true</UseVSHostingProcess>
-    <DocumentationFile>bin\Debug\Habanero.Testability.XML</DocumentationFile>
+    <DocumentationFile>bin\Debug\Habanero.Testability.CF.XML</DocumentationFile>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <NoStdLib>true</NoStdLib>
     <NoConfig>true</NoConfig>
