--- a/source/Habanero.Testability.CF.Tests/Habanero.Testability.CF.Tests.csproj
+++ b/source/Habanero.Testability.CF.Tests/Habanero.Testability.CF.Tests.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Habanero.Testability.CF.Tests</RootNamespace>
-    <AssemblyName>Habanero.Testability,CF.Tests</AssemblyName>
+    <AssemblyName>Habanero.Testability.CF.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{4D628B5B-2FBC-4AA6-8C16-197242AEB884};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
