Work on #1737 (Support for generating byte[] property values) Still needs some tests.
git-svn-id: http://delicious:8080/svn/habanero/HabaneroCommunity/Habanero.Testability/trunk@19358 6b8f5710-b20c-734b-ac0a-461ee9249d7d

--- a/source/Habanero.Testability/Habanero.Testability.csproj
+++ b/source/Habanero.Testability/Habanero.Testability.csproj
@@ -78,6 +78,7 @@
       <DependentUpon>Messages.resx</DependentUpon>
     </Compile>
     <Compile Include="TestSession.cs" />
+    <Compile Include="ValidValidGeneratorByteArray.cs" />
     <Compile Include="ValidValidGeneratorImage.cs" />
     <Compile Include="ValidValueGeneratorFromBOList.cs" />
     <Compile Include="ExtensionMethods\TestabilityExtensions.cs" />
