--- a/source/Habanero.Testability.Testers/Habanero.Testability.Testers.csproj
+++ b/source/Habanero.Testability.Testers/Habanero.Testability.Testers.csproj
@@ -49,7 +49,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\Habanero.Smooth.dll</HintPath>
     </Reference>
-    <Reference Include="nunit.framework, Version=2.5.3.9345, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+    <Reference Include="nunit.framework">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\nunit.framework.dll</HintPath>
     </Reference>
