updated lib. fixed problem with Habanero.Testability.Testers.Tests.csproj
git-svn-id: http://delicious:8080/svn/habanero/HabaneroCommunity/Habanero.Testability/branches/v1.3@22258 6b8f5710-b20c-734b-ac0a-461ee9249d7d

--- a/source/Habanero.Testability.Testers.Tests/Habanero.Testability.Testers.Tests.csproj
+++ b/source/Habanero.Testability.Testers.Tests/Habanero.Testability.Testers.Tests.csproj
@@ -48,15 +48,15 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\Habanero.Smooth.dll</HintPath>
     </Reference>
-    <Reference Include="log4net>
+    <Reference Include="log4net">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\log4net.dll</HintPath>
     </Reference>
-    <Reference Include="nunit.framework>
+    <Reference Include="nunit.framework">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\nunit.framework.dll</HintPath>
     </Reference>
-    <Reference Include="Rhino.Mocks>
+    <Reference Include="Rhino.Mocks">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\Rhino.Mocks.dll</HintPath>
     </Reference>
