--- a/source/Habanero.Testability.Testers.Tests/Habanero.Testability.Testers.Tests.csproj
+++ b/source/Habanero.Testability.Testers.Tests/Habanero.Testability.Testers.Tests.csproj
@@ -83,6 +83,7 @@
     <Compile Include="TestPropDefTester.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestSingleRelDefTester.cs" />
+    <Compile Include="TestSingleValueTester.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Habanero.Testability.Helpers\Habanero.Testability.Helpers.csproj">
