Added support for ValidValueGeneratorShort and RandomValueGen.GenerateValidShort
git-svn-id: http://delicious:8080/svn/habanero/HabaneroCommunity/Habanero.Testability/trunk@29871 6b8f5710-b20c-734b-ac0a-461ee9249d7d

--- a/source/Habanero.Testability.Tests/Habanero.Testability.Tests.csproj
+++ b/source/Habanero.Testability.Tests/Habanero.Testability.Tests.csproj
@@ -101,6 +101,7 @@
     <Compile Include="TestValidValueGeneratorDecimal.cs" />
     <Compile Include="TestValidValueGeneratorDouble.cs" />
     <Compile Include="TestValidValueGeneratorInt.cs" />
+    <Compile Include="TestValidValueGeneratorShort.cs" />
     <Compile Include="TestValidValueGeneratorTextFile.cs" />
   </ItemGroup>
   <ItemGroup>
