Add rake-tasks submodule Change ref to log4net, nunit and rhino to nuget packages

--- a/source/Habanero.Testability.Helpers/Habanero.Testability.Helpers.csproj
+++ b/source/Habanero.Testability.Helpers/Habanero.Testability.Helpers.csproj
@@ -49,7 +49,7 @@
       <HintPath>..\..\lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="Rhino.Mocks">
-      <HintPath>..\..\lib\Rhino.Mocks.dll</HintPath>
+      <HintPath>..\packages\RhinoMocks.3.6.1\lib\net\Rhino.Mocks.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
@@ -90,6 +90,9 @@
       <Project>{89F76B54-7059-4863-86D3-3D0CA11CAA1C}</Project>
       <Name>Habanero.Testability</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
