Update ref to Nuget

--- a/source/Habanero.Testability.Testers/Habanero.Testability.Testers.csproj
+++ b/source/Habanero.Testability.Testers/Habanero.Testability.Testers.csproj
@@ -49,9 +49,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\Habanero.Smooth.dll</HintPath>
     </Reference>
-    <Reference Include="nunit.framework">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\lib\nunit.framework.dll</HintPath>
+     <Reference Include="nunit.framework, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
+        <SpecificVersion>False</SpecificVersion>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
@@ -87,6 +87,9 @@
       <Project>{89F76B54-7059-4863-86D3-3D0CA11CAA1C}</Project>
       <Name>Habanero.Testability</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
