--- a/source/packages/repositories.config
+++ b/source/packages/repositories.config
@@ -2,5 +2,6 @@
 <repositories>
   <repository path="..\Habanero.Testability.Helpers\packages.config" />
   <repository path="..\Habanero.Testability.Testers.Tests\packages.config" />
+  <repository path="..\Habanero.Testability.Testers\packages.config" />
   <repository path="..\Habanero.Testability.Tests\packages.config" />
 </repositories>
